--- a/EstateMate/Info.plist
+++ b/EstateMate/Info.plist
@@ -15,5 +15,8 @@
 			</array>
 		</dict>
 	</array>
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>用于一键获取当前位置并填写开放日活动地址。</string>
 </dict>
 </plist>
