--- a/EstateMate/Info.plist
+++ b/EstateMate/Info.plist
@@ -12,6 +12,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>estatemate</string>
+				<string>com.googleusercontent.apps.313537601779-5084ffo0usvos0si1m9s9qtev5bhthos</string>
 			</array>
 		</dict>
 	</array>
