UI: rename OpenHouse to 活动策划

--- a/EstateMate/Info.plist
+++ b/EstateMate/Info.plist
@@ -17,7 +17,7 @@
 		</dict>
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>用于一键获取当前位置并填写开放日活动地址。</string>
+	<string>用于一键获取当前位置并填写活动策划地址。</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 </dict>
